[gd_scene load_steps=5 format=3 uid="uid://wyctdlu4bvl5"]

[ext_resource type="Script" path="res://scenes/ui/button/long_press_button.gd" id="1_pwgox"]
[ext_resource type="AudioStream" uid="uid://dp6s3w31kmqn3" path="res://assets/audio/ui/click3.ogg" id="2_m21a5"]
[ext_resource type="Texture2D" uid="uid://byot7ghfssf48" path="res://assets/sprites/items/items_16_x_16/hangover_potion.png" id="3_oog8u"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_augj5"]
lifetime_randomness = 0.11
particle_flag_disable_z = true
emission_shape_offset = Vector3(-7.49, 15.315, 0)
emission_shape_scale = Vector3(-1.09, 2.03, 1)
emission_shape = 1
emission_sphere_radius = 32.65
direction = Vector3(1, -1, 0)
spread = 30.843
initial_velocity_min = 12.15
initial_velocity_max = 61.01
angular_velocity_min = -61.28
angular_velocity_max = 74.18
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
color = Color(0, 0.733333, 1, 0.290196)

[node name="LongPressButton" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -9.5
offset_right = 45.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "LongPressButton
"
script = ExtResource("1_pwgox")
change_speed = 45.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m21a5")
bus = &"SFX"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -91.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1157, 0.68352, 0.89, 0.517647)

[node name="GPUParticles2D" type="GPUParticles2D" parent="ColorRect"]
position = Vector2(11.5, 34.5)
amount = 20
process_material = SubResource("ParticleProcessMaterial_augj5")
texture = ExtResource("3_oog8u")
lifetime = 3.0
randomness = 0.13
trail_lifetime = 1.3

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
